--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
 MONGODB_DEV=mongodb://127.0.0.1:27017/database
-MONGODB_URI=''
+MONGODB_URI='mongodb://bearsteam23:bearsteam23@ds117101.mlab.com:17101/bearsteam23'
 NODE_ENV =development
-BASEURL_PROD=
+BASEURL_PROD=''
 BASEURL_DEV='http://localhost:3000/api'
