--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
+    "buefy": "^0.6.6",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
@@ -29,13 +31,18 @@
     "express-validator": "^5.1.2",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
+    "mapbox-gl": "^0.46.0",
+    "mapbox-gl-vue": "^1.9.0",
     "mongoose": "^5.0.16",
     "mongoose-unique-validator": "^2.0.1",
     "morgan": "^1.9.0",
     "random-id": "0.0.2",
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-places": "^1.1.0",
+    "vue-router": "^3.0.1",
+    "vue-toasted": "^1.1.24",
+    "vue2-autocomplete-js": "^0.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
