--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "random-id": "0.0.2",
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
+    "vue-awesome": "^2.3.7",
     "vue-places": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-toasted": "^1.1.24",
