--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "express-validator": "^5.1.2",
     "jsonwebtoken": "^8.2.1",
     "lodash": "^4.17.10",
+    "luxon": "^1.3.0",
     "mapbox-gl": "^0.46.0",
     "mapbox-gl-vue": "^1.9.0",
     "mongoose": "^5.0.16",
@@ -40,12 +41,14 @@
     "serve-static": "^1.13.2",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
+    "vue-datetime": "^1.0.0-beta.3",
     "vue-places": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-toasted": "^1.1.24",
     "vue2-autocomplete-js": "^0.2.2",
     "vuex": "^3.0.1",
-    "vuex-persistedstate": "^2.5.4"
+    "vuex-persistedstate": "^2.5.4",
+    "weekstart": "^1.0.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
