--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
     "vue-datetime": "^1.0.0-beta.3",
+    "vue-moment": "^4.0.0",
     "vue-places": "^1.1.0",
     "vue-router": "^3.0.1",
+    "vue-slider-component": "^2.7.2",
     "vue-toasted": "^1.1.24",
     "vue2-autocomplete-js": "^0.2.2",
     "vuex": "^3.0.1",
