--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,4 @@ MONGODB_URI='mongodb://bearsteam23:bearsteam23@ds117101.mlab.com:17101/bearsteam
 NODE_ENV =development
 BASEURL_PROD=''
 BASEURL_DEV='http://localhost:3000/api'
+JWT_SECRET=
