--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "bluebird": "^3.5.1",
     "body-parser": "^1.18.2",
     "buefy": "^0.6.6",
+    "cloudinary": "^1.11.0",
     "connect-history-api-fallback": "^1.5.0",
     "cors": "^2.8.4",
     "debug": "^3.1.0",
@@ -46,6 +47,7 @@
     "vue-places": "^1.1.0",
     "vue-router": "^3.0.1",
     "vue-slider-component": "^2.7.2",
+    "vue-tabs-component": "^1.4.0",
     "vue-toasted": "^1.1.24",
     "vue2-autocomplete-js": "^0.2.2",
     "vuex": "^3.0.1",
