--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "morgan": "^1.9.0",
     "random-id": "0.0.2",
     "serve-static": "^1.13.2",
+    "url-parse": "^1.4.3",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
     "vue-datetime": "^1.0.0-beta.3",
