--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "author": "Idakwoji Theophilus <pietrosparks@gmail.com>",
   "private": true,
   "scripts": {
+    "preinstall": "npm install nodemon -g",
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon ./api/bin/www",
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
