--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "node build/build.js"
   },
   "dependencies": {
+    "@sendgrid/mail": "^6.3.1",
     "axios": "^0.18.0",
     "bcrypt-nodejs": "0.0.3",
     "bluebird": "^3.5.1",
@@ -41,6 +42,7 @@
     "morgan": "^1.9.0",
     "random-id": "0.0.2",
     "serve-static": "^1.13.2",
+    "textbelt": "0.0.4",
     "url-parse": "^1.4.3",
     "vue": "^2.5.2",
     "vue-awesome": "^2.3.7",
